--- a/environment.yml
+++ b/environment.yml
@@ -9,7 +9,7 @@ dependencies:
 - geojson=2.3.0
 - ipython=5.3.0
 - jupyter=1.0.0
-- matplotlib=3.1.0
+- matplotlib
 - pandas=0.20.1
 - pip=9.0.1
 - python=3.6.1
