--- a/environment.yml
+++ b/environment.yml
@@ -14,7 +14,7 @@ dependencies:
 - pip=9.0.1
 - python=3.6.1
 - requests=2.14.2
-- scipy=0.19.0
+- shapely=1.6.4
 - pip:
     - osmapi==1.2.2
     - polyline==1.3.2
