--- a/environment.yml
+++ b/environment.yml
@@ -3,18 +3,18 @@ channels:
 - conda-forge
 - defaults
 dependencies:
-- arrow=0.12.1
-- branca=0.3.0
-- folium=0.8.0
-- geojson=2.3.0
-- ipython=5.3.0
-- jupyter=1.0.0
+- arrow=0.12.*
+- branca=0.3.*
+- folium=0.8.*
+- geojson=2.3.*
+- ipython=5.3.*
+- jupyter=1.0.*
 - matplotlib
-- pandas=0.20.1
-- pip=9.0.1
-- python=3.6.1
-- requests=2.14.2
-- shapely=1.6.4
+- pandas=0.20.*
+- pip=9.0.*
+- python=3.6.*
+- requests=2.14.*
+- shapely=1.6.*
 - pip:
-    - osmapi==1.2.2
-    - polyline==1.3.2
+    - osmapi==1.2.*
+    - polyline==1.3.*
