--- a/environment.yml
+++ b/environment.yml
@@ -16,6 +16,8 @@ dependencies:
 - requests=2.22.*
 - scipy=1.1.*
 - shapely=1.6.*
+- geopandas=0.4.*
 - pip:
     - osmapi==1.2.*
     - polyline==1.3.*
+    - anytree==2.6.*
