Apparently but I forgot one

--- a/.github/workflows/osx-ubuntu-manual-install.yml
+++ b/.github/workflows/osx-ubuntu-manual-install.yml
@@ -72,7 +72,7 @@ jobs:
     - name: Teardown the emission environment
       shell: bash -l {0}
       run: |
-        source ${{ SOURCE_SCRIPT }}
+        source $SOURCE_SCRIPT
         source setup/teardown.sh
 
     - name: Teardown the miniconda install
