--- a/.github/workflows/osx-ubuntu-manual-install.yml
+++ b/.github/workflows/osx-ubuntu-manual-install.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     env: 
       EXP_CONDA_VER: 4.7.12
-      SOURCE_SCRIPT: ~/miniconda-$EXP_CONDA_VER/etc/profile.d/conda.sh
+      SOURCE_SCRIPT: ~/miniconda-4.7.12/etc/profile.d/conda.sh
     # The type of runner that the job will run on
     runs-on: ${{ matrix.os }}
     strategy:
@@ -57,7 +57,7 @@ jobs:
         source $SOURCE_SCRIPT
         echo $CI
 
-    - name: Setup the emission environment
+    - name: Setup the emissioneval environment
       shell: bash -l {0}
       run: |
         conda --version
@@ -66,10 +66,10 @@ jobs:
         conda --version
         source setup/setup.sh
         echo "About to activate environment"
-        conda activate emission
+        conda activate emissioneval
         conda env list
 
-    - name: Teardown the emission environment
+    - name: Teardown the emissioneval environment
       shell: bash -l {0}
       run: |
         source $SOURCE_SCRIPT
