--- a/.github/workflows/binder-install.yml
+++ b/.github/workflows/binder-install.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: test-with-docker
+name: binder-install
 
 # Controls when the action will run. Triggers the workflow on push or pull request 
 # events but only for the master branch
@@ -27,7 +27,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install repo2docker
-      run: pip install jupyter-repo2docker
+      run: pip3 install jupyter-repo2docker
 
     - name: Build docker from checked out repo
       run: jupyter-repo2docker --no-run .
