--- a/.github/workflows/binder-install.yml
+++ b/.github/workflows/binder-install.yml
@@ -27,7 +27,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install repo2docker
-      run: pip3 install jupyter-repo2docker
+      run: |
+        pip install --upgrade setuptools
+        pip3 install jupyter-repo2docker
 
     - name: Build docker from checked out repo
       run: jupyter-repo2docker --no-run .
