Print the outputs as well

--- a/.github/workflows/binder-install.yml
+++ b/.github/workflows/binder-install.yml
@@ -26,7 +26,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Install using repo2docker
+    - name: install-using-repo2docker
       uses: shankari/repo2docker-action@master
 
+    - name: Verify repo2docker environment
+      run: |
+        echo "Conda version was ${{ steps.install-using-repo2docker.outputs.CURR_CONDA_VER }}"
+        echo "repo2docker version was ${{ steps.install-using-repo2docker.outputs.CURR_R2D_VER }}"
 
