--- a/.github/workflows/binder-install.yml
+++ b/.github/workflows/binder-install.yml
@@ -34,11 +34,20 @@ jobs:
 
     - name: Verify repo2docker environment
       run: |
-        echo "Conda version was ${{ steps.install-using-repo2docker.outputs.CURR_CONDA_VER }}"
-        echo "repo2docker version was ${{ steps.install-using-repo2docker.outputs.CURR_R2D_VER }}"
-        echo "docker version was ${{ steps.install-using-repo2docker.outputs.CURR_DOCKER_VER }}"
         echo "image SHA was ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }}"
         echo "Checking to see if image exists"
         docker image list
         echo "Done checking images"
 
+        echo "Conda version was ${{ steps.install-using-repo2docker.outputs.CURR_CONDA_VER }}"
+        echo "repo2docker version was ${{ steps.install-using-repo2docker.outputs.CURR_R2D_VER }}"
+        echo "docker version was ${{ steps.install-using-repo2docker.outputs.CURR_DOCKER_VER }}"
+
+        CURR_DOCKER_VER=`docker --version`
+        echo "On rechecking, docker ver is $CURR_DOCKER_VER"
+
+        CURR_CONDA_VER=`docker run ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }} /srv/conda/bin/conda --version | cut -d " " -f 2`
+        echo "On rechecking, conda ver is $CURR_CONDA_VER"
+
+        CURR_R2D_VER=`docker run jupyter/repo2docker:master pip3 list | grep jupyter-repo2docker`
+        echo "On rechecking, repo2docker ver is $CURR_R2D_VER"
