--- a/setup/environment.yml
+++ b/setup/environment.yml
@@ -1,11 +1,14 @@
 name: emissioneval
 channels:
-- conda-forge
+- main
 dependencies:
 - arrow=0.13.1
+- ipython=7.9.0
+- jupyter=1.0.0
 - matplotlib=3.1.3
 - pandas=1.0.3
 - pip=20.0.2
+- python=3.8.2
 - requests=2.23.0
 - scipy=1.4.1
 - shapely=1.6.4
