Make sure we activate the right thing

--- a/.github/workflows/exploratory-notebooks-test-osx.yml
+++ b/.github/workflows/exploratory-notebooks-test-osx.yml
@@ -41,5 +41,6 @@ jobs:
       shell: bash -l {0}
       run: |
         source $SOURCE_SCRIPT
-        source activate emissioneval
+        conda activate emissioneval
+        conda env list
         python bin/run_notebooks.py ${{ matrix.target }}
