--- a/.github/workflows/exploratory-notebooks-test-osx.yml
+++ b/.github/workflows/exploratory-notebooks-test-osx.yml
@@ -44,3 +44,22 @@ jobs:
         conda activate emissioneval
         conda env list
         python bin/run_notebooks.py ${{ matrix.target }}
+
+    - name: Test the interactive timeline
+      id: run-test
+      shell: bash -l {0}
+      run: |
+        source $SOURCE_SCRIPT
+        conda activate emissioneval
+        conda env list
+        python bin/run_notebooks.py ${{ matrix.target }}
+        OUT_FILENAME=`echo ${{ matrix.target }} | sed "s/.ipynb/_out.ipynb/"`
+        echo "output filename = $OUT_FILENAME"
+        echo "::set-output name=OUT_FILENAME::${OUT_FILENAME}"
+
+    - name: Upload result for the interactive timeline
+      uses: actions/upload-artifact@v1
+      with:
+        name: ${{ steps.run-test.outputs.OUT_FILENAME }}
+        path: .
+
