Only publish the output ipynb and not everything

--- a/.github/workflows/exploratory-notebooks-test-osx.yml
+++ b/.github/workflows/exploratory-notebooks-test-osx.yml
@@ -61,5 +61,5 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: ${{ steps.run-test.outputs.OUT_FILENAME }}
-        path: .
+        path: ./${{ steps.run-test.outputs.OUT_FILENAME }}
 
