--- a/.github/workflows/exploratory-notebooks-test-binder.yml
+++ b/.github/workflows/exploratory-notebooks-test-binder.yml
@@ -38,33 +38,35 @@ jobs:
       with:
         IMAGE_NAME: "mobilitynet"
 
-    - name: Test the interactive timeline
+    - name: Start the recently built docker container
       run: |
         echo "image SHA was ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }}"
+        docker start --name mobilitynet_test ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }}
+
+    - name: Test the interactive timeline
+      run: |
+        echo "About to run notebooks"
+        docker exec mobilitynet_test python bin/run_notebooks.py ${{ matrix.target }}
+
+    - name: Test the interactive timeline
+      id: copy-failure-output
+      if: failure()
+      run: |
         OUT_FILENAME=`echo ${{ matrix.target }} | sed "s/.ipynb/_out.ipynb/"`
         echo "output filename = $OUT_FILENAME"
 
-        mkdir -p /tmp/artifacts
-        # docker run -v /tmp/artifacts:/artifacts ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }} "python bin/run_notebooks.py ${{ matrix.target }} && cp $OUT_FILENAME /artifacts"
-        # docker run -v /tmp/artifacts:/artifacts ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }} "which python && python --version && ls bin && ls ${{ matrix.target}} && ls /artifacts"
-        docker run -v /tmp/artifacts:/artifacts ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }} << EOF
-        echo "About to run notebooks"
-        python bin/run_notebooks.py ${{ matrix.target }}
-        TEST_EXIT_CODE = $?
-        echo "Existing exit code = $TEST_EXIT_CODE, copying $OUT_FILENAME to artifacts"
-        cp $OUT_FILENAME /artifacts
-        echo "Exiting with the correct exit code"
-        exit $TEST_EXIT_CODE
-        EOF
-
-        echo "Checking to see that the output file is there"
-        ls /tmp/artifacts
-
+        echo "About to copy file from docker"
+        docker cp mobilitynet_test:$OUT_FILENAME /tmp
+        ls -al /tmp/$OUT_FILENAME
         echo "::set-output name=OUT_FILENAME::${OUT_FILENAME}"
 
     - name: Upload result for the interactive timeline
+      if: failure()
       uses: actions/upload-artifact@v1
       with:
-        name: ${{ steps.run-test.outputs.OUT_FILENAME }}
-        path: /tmp/artifacts/${{ steps.run-test.outputs.OUT_FILENAME }}
+        name: ${{ steps.copy-failure-output.outputs.OUT_FILENAME }}
+        path: /tmp/${{ steps.copy-failure-output.outputs.OUT_FILENAME }}
 
+    - name: Shutdown the recently built docker container
+      run: |
+        docker stop mobility_test
