--- a/.github/workflows/exploratory-notebooks-test-binder.yml
+++ b/.github/workflows/exploratory-notebooks-test-binder.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Start the recently built docker container
       run: |
         echo "image SHA was ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }}"
-        docker start --name mobilitynet_test ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }}
+        docker run -it --name mobilitynet_test -p 8888:8888  ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }} jupyter notebook --ip 0.0.0.0
 
     - name: Test the interactive timeline
       run: |
@@ -56,6 +56,7 @@ jobs:
         echo "output filename = $OUT_FILENAME"
 
         echo "About to copy file from docker"
+        docker exec mobilitynet_test ls
         docker cp mobilitynet_test:$OUT_FILENAME /tmp
         ls -al /tmp/$OUT_FILENAME
         echo "::set-output name=OUT_FILENAME::${OUT_FILENAME}"
