--- a/.github/workflows/exploratory-notebooks-test-binder.yml
+++ b/.github/workflows/exploratory-notebooks-test-binder.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Start the recently built docker container
       run: |
         echo "image SHA was ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }}"
-        docker run -it --name mobilitynet_test -p 8888:8888  ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }} jupyter notebook --ip 0.0.0.0
+        docker run --name mobilitynet_test -p 8888:8888  ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }} jupyter notebook --ip 0.0.0.0
 
     - name: Test the interactive timeline
       run: |
