--- a/.github/workflows/exploratory-notebooks-test-binder.yml
+++ b/.github/workflows/exploratory-notebooks-test-binder.yml
@@ -47,6 +47,10 @@ jobs:
       run: |
         echo "About to run notebooks"
         docker exec mobilitynet_test python bin/run_notebooks.py ${{ matrix.target }}
+        echo "After running the notebooks, checking container list"
+        docker container list
+        echo "After running the notebooks, checking ps -a"
+        docker ps -a
 
     - name: Copy the failure output
       id: copy-failure-output
@@ -70,4 +74,8 @@ jobs:
 
     - name: Shutdown the recently built docker container
       run: |
-        docker stop mobility_test
+        echo "Running docker container list"
+        docker container list
+        echo "Running docker ps -a"
+        docker ps -a
+        # docker stop mobility_test
