Just need to download the notebook and upload it as an artifact

--- a/.github/workflows/exploratory-notebooks-test-binder.yml
+++ b/.github/workflows/exploratory-notebooks-test-binder.yml
@@ -61,6 +61,8 @@ jobs:
         docker exec mobilitynet_test ls
         DOCKER_WD=`docker exec mobilitynet_test echo $PWD`
         echo "DOCKER_WD=$DOCKER_WD"
+        docker exec mobilitynet_test ls $DOCKER_WD
+        docker exec mobilitynet_test ls $DOCKER_WD/$OUT_FILENAME
         docker cp mobilitynet_test:$DOCKER_WD/$OUT_FILENAME /tmp
         ls -al /tmp/$OUT_FILENAME
         echo "::set-output name=OUT_FILENAME::${OUT_FILENAME}"
