CI for tests, not just builds (#42)
* CI for tests, not just builds

* Run the script correctly

* Activate the environment correctly

* Make sure we activate the right thing

* Export the ipython notebook file

So that we can see the output and errors (if any)

* Only publish the output ipynb and not everything

* Run tests in binder as well since the environment is different

* Try to figure out more about the docker environment

* Return proper exit codes

So that tests that should fail actually do fail

* Only run the tests once on the manual install

+ add some additional logs for the repo2docker case. If not, we may need to
write our own script for easier inclusion

* Comment out the arbitrary stuff

* Save the generated image so we can experiment with running commands in it

* Correctly export the binder image

+ upload output file on failure

* Fix outputs + launch docker better

* Remove -it since we are not running in a terminal

* Run the notebook with -d so it doesn't hang

+ fix the build to not have `:`

* Some more binder/notebook fixes

* Fix the docker stop + copy correctly on failure

* Fix the paths for the binder install

* Just need to download the notebook and upload it as an artifact

* finally get the pwd right to copy from the docker

* Stupid close quote

* Ensure that tests fail even on manual run

* Fix yaml file format

* Final fixes to the build

- Remove the expected failing test
- Really remove the 4th os to test the manual install on

* Add in the badges

And then it's time to commit!

--- a/.github/workflows/binder-install.yml
+++ b/.github/workflows/binder-install.yml
@@ -56,3 +56,22 @@ jobs:
         echo "On checking, docker ver is $CURR_DOCKER_VER"
         echo "             conda ver is $CURR_CONDA_VER and"
         echo "             repo2docker ver is $CURR_R2D_VER"
+
+    - name: Package the built image
+      id: package-build
+      run: |
+        OUT_FILENAME=`echo ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }} | sed "s/:/_/"`
+        docker save ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }} > /tmp/$OUT_FILENAME.tar
+        ls -alh /tmp/$OUT_FILENAME.tar
+        echo "::set-output name=OUT_FILENAME::${OUT_FILENAME}"
+
+    - name: Save the built image as an artifact
+      run: |
+        echo "About to upload /tmp/${{ steps.package-build.outputs.OUT_FILENAME}}.tar"
+        ls -al /tmp/${{ steps.package-build.outputs.OUT_FILENAME}}.tar
+        echo "Space left on disk"
+        df -h
+#       uses: actions/upload-artifact@v1
+#       with:
+#         name: ${{ steps.package-build.outputs.OUT_FILENAME}}.tar
+#         path: /tmp/${{ steps.package-build.outputs.OUT_FILENAME }}.tar
