--- a/.github/workflows/exploratory-notebooks-test-binder.yml
+++ b/.github/workflows/exploratory-notebooks-test-binder.yml
@@ -33,6 +33,12 @@ jobs:
     outputs:
         IMAGE_SHA_NAME: ${{ steps.install-using-repo2docker.outputs.IMAGE_SHA_NAME }}
         OUT_IMGNAME: ${{ steps.package-build.outputs.OUT_IMGNAME }}
+    strategy:
+      matrix:
+        # Two tests are sufficient because the other notebooks are already
+        # tested in the manual install and the timeline notebooks are almost
+        # identical
+        target: [Data_exploration_template.ipynb]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
